Configuracion para Front